add work profile for cloning

--- a/.gitconfig
+++ b/.gitconfig
@@ -2,3 +2,4 @@
 oss = !git config user.name NegatioN && git config user.email joakimrishaug@gmail.com
 work = !git config user.name Joakim && git config user.email joakim.rishaug@finn.no
 oc = !git clone $1 && cd $(basename $1 .git) && git oss
+wc = !git clone $1 && cd $(basename $1 .git) && git work
